fix for long checkbox label alignment

--- a/src/components/locations/RequestVisitForm/RequestVisitForm.module.css
+++ b/src/components/locations/RequestVisitForm/RequestVisitForm.module.css
@@ -21,6 +21,7 @@
 
 .checkBox,
 .radio {
+  position: relative;
   margin-bottom: var(--space-s);
 }
 
